--- a/about-us.html
+++ b/about-us.html
@@ -93,9 +93,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <p class="f-para" style="text-align: justify;">STRIDE Ethiopia, initiated by the Ministry of Innovation of Ethiopia, is a
-                            pioneering annual event aimed at fostering collaboration and innovation in Science,
-                            Technology, Research, Innovation, Digitalization, and Entrepreneurship (STRIDE). It serves
+                        <p class="f-para" style="text-align: justify;"><b>STRIDE Ethiopia, </b>initiated by the Ministry
+                            of
+                            Innovation of Ethiopia, is a
+                            pioneering annual event aimed at fostering collaboration and innovation in <b>Science,
+                                Technology, Research, Innovation, Digitalization, and Entrepreneurship (STRIDE)</b>. It
+                            serves
                             as both a conference and an expo, bringing together stakeholders from startups, ecosystem
                             builders, corporations, government offices, academia, and development partners. With a focus
                             on national and international policy discussions, the event provides a platform to shape
@@ -107,24 +110,40 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <!-- <div class="about-pic"> -->
                     <img src="img/team-member/member.png" alt="">
                     <!-- </div> -->
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <div class="about-text">
-                        <h3>The 2024 Conference</h3>
-                        <p>When I first got into the online advertising business, I was looking for the magical
-                            combination that would put my website into the top search engine rankings, catapult me to
-                            the forefront of the minds or individuals looking to buy my product, and generally make me
-                            rich beyond my wildest dreams! After succeeding in the business for this long, I’m able to
-                            look back on my old self with this kind of thinking and shake my head. </p>
+                        <h3>The 2024 Expo</h3>
+                        <p style="text-align: justify;">The STRIDE Ethiopia Expo 2024, with the motto <span style="font-style: italic;">Science
+                                Unlocks, Technology Connects,
+                                Innovation Drives,</span> is dedicated to showcasing innovative technologies and
+                            research products, fostering collaboration, and driving economic growth through technology
+                            transfer.
+                        </p>
+                        <p>Key activities include:</p>
                         <ul>
-                            <li><span class="icon_check"></span> Write On Your Business Card</li>
-                            <li><span class="icon_check"></span> Advertising Outdoors</li>
-                            <li><span class="icon_check"></span> Effective Advertising Pointers</li>
-                            <li><span class="icon_check"></span> Kook 2 Directory Add Url Free</li>
+                            <li><span class="icon_check"></span> Showcasing innovative technologies aligned with
+                                national
+                                development goals. </li>
+                            <li><span class="icon_check"></span> Facilitating networking and investment opportunities
+                                for research stakeholders.</li>
+                            <li><span class="icon_check"></span> Promoting commercialization of research outputs
+                            </li>
+                            <li><span class="icon_check"></span> ⁠Providing business development support for market
+                                expansion.
+                            </li>
+                            <li><span class="icon_check"></span> Cultivating collaboration among researchers,
+                                scientists, and
+                                industry professionals.
+                            </li>
+                            <li><span class="icon_check"></span>⁠ Educating attendees on emerging trends and best
+                                practices.</li>
+                            <li><span class="icon_check"></span> Hosting STI Award, recognizing outstanding
+                                contributions to national development.</li>
                         </ul>
                     </div>
                 </div>
@@ -219,6 +238,7 @@
                                 <textarea placeholder="Messages"></textarea>
                                 <button type="submit" class="site-btn">Send Message</button>
                             </div>
+                            <div />
                         </div>
                     </form>
                 </div>
